# NboxCLI

./: README.md  pyproject.toml  requirements.txt
nbox_cli/: __init__.py  cli.py  client.py  config.py
